@@ -71,6 +71,7 @@ void shandler ( int sign )
 		signal ( sign , &shandler );
 
 	pcap_close( handle );
+
 	ntoh_exit();
 
 	fprintf( stderr, "\n\n[+] Capture finished!\n" );
@@ -272,25 +273,23 @@ void tcp_callback ( pntoh_tcp_stream_t stream , pntoh_tcp_peer_t orig , pntoh_tc
 
 	switch ( reason )
 	{
-		/* Synchronization */
-		case NTOH_REASON_SYNC:
-			if ( extra != 0 )
-				switch ( extra )
-				{
-					case NTOH_REASON_CLOSED:
-						fprintf ( stderr , "+ %s | Connection closed by %s (%s)" , ntoh_get_reason ( reason ) , stream->closedby == NTOH_CLOSEDBY_CLIENT ? "Client" : "Server" , inet_ntoa( *(struct in_addr*) &(stream->client.addr) ) );
-						break;
+        switch ( extra )
+        {
+            case NTOH_REASON_MAX_SYN_RETRIES_REACHED:
+            case NTOH_REASON_MAX_SYNACK_RETRIES_REACHED:
+            case NTOH_REASON_HSFAILED:
+            case NTOH_REASON_EXIT:
+            case NTOH_REASON_TIMEDOUT:
+            case NTOH_REASON_CLOSED:
+                if ( extra == NTOH_REASON_CLOSED )
+                    fprintf ( stderr , "\n\t+ Connection closed by %s (%s)" , stream->closedby == NTOH_CLOSEDBY_CLIENT ? "Client" : "Server" , inet_ntoa( *(struct in_addr*) &(stream->client.addr) ) );
+                else
+                    fprintf ( stderr , "\n\t+ %s/%s - %s" , ntoh_get_reason ( reason ) , ntoh_get_reason ( extra ) , ntoh_tcp_get_status ( stream->status ) );
 
-					case NTOH_REASON_ESTABLISHED:
-						fprintf ( stderr , "+ %s | Connection Established\n\t\t- Client: %s:%d (MSS: %i SACK: %i WSize: %i WScale: %i)" , ntoh_get_reason ( reason ) , inet_ntoa( *(struct in_addr*) &orig->addr ) , ntohs(orig->port) , orig->mss , orig->sack , orig->wsize , orig->wscale );
-						fprintf ( stderr , "\n\t\t- Server: %s:%d (MSS: %i SACK: %i WSize: %i WScale: %i)\n" , inet_ntoa( *(struct in_addr*) &dest->addr ) , ntohs(dest->port) , dest->mss , dest->sack , dest->wsize , dest->wscale );
-						break;
+                break;
+        }
 
-					default:
-						fprintf ( stderr , "+ %s | %s\n" , ntoh_get_reason ( reason ) , ntoh_get_reason ( extra ) );
-						break;
-				}
-			break;
+        break;
 
 		/* Data segment */
 		case NTOH_REASON_DATA:
@@ -476,7 +475,7 @@ int main ( int argc , char *argv[] )
 	/* no streams left */
 	if ( ipf + tcps > 0 )
 	{
-		fprintf( stderr, "\n\n[+] There are currently %i stored TCP streams and %i IPv4 flows. You can wait them to get closed or press CTRL+C\n" , tcps , ipf );
+		fprintf( stderr, "\n\n[+] There are currently %i stored TCP stream(s) and %i IPv4 flow(s). You can wait them to get closed or press CTRL+C\n" , tcps , ipf );
 		pause();
 	}
 
