@@ -3,7 +3,7 @@ PROJECT ( LIBNTOH )
 
 # set source files and flags
 SET ( LIBNTOH_SRCS libntoh.c tcpreassembly.c ipv4defrag.c common.c )
-SET ( CMAKE_C_FLAGS "-Wall -Os -O2 -pipe -fPIC" )
+SET ( CMAKE_C_FLAGS "-Wall -Os -O2 -pipe -fPIC -g" )
 SET ( LIBNTOH_INC inc )
 
 # set project version
