@@ -1,5 +1,6 @@
 libntoh (0.4a)
 
+	* Fixed a MAJOR bug in TCP (avoided to correctly finish TCP streams)
 	* Self implementation of hash tables (collision resolution by chaining)
 	* Fixed a MAJOR bug in IPv4 defragmentation (deadlock)
 	* Fixed a bug in IPv4 defragmentation when building the complete datagram (now using flow->total instead of flow->meat to allocate the memory. In some scenarios may cause segfault)
